chore(setup): setup linter and formatter
- linting and formatting rules across apps and tools.
- Ensure consistency in code style and standards.

--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "eureka-bank",
+  "name": "@eureka-bank/eslint-config",
   "version": "1.0.0",
   "description": "",
   "private": true,
+  "files": [
+    "./base.js"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "@eureka-bank/prettier-config": "workspace:^",
-    "prettier": "^3.2.5"
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0"
   }
 }
