chore(api): base typescript configuration
Updated the following scripts:
- dev: use of tsx watch
- build: use of tsup, and rimraf to delete previous build
- start
- lint: eslint-config

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,10 +3,13 @@
   "compilerOptions": {
     "outDir": "dist",
     "sourceMap": true,
-    "moduleResolution": "NodeNext",
-    "module": "NodeNext",
+    "moduleResolution": "Bundler",
+    "module": "ESNext",
     "target": "ES2022",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts"]
 }
