--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,29 +8,32 @@
     "test": "test"
   },
   "scripts": {
-    "test": "npm run build:ts && tsc -p test/tsconfig.json && FASTIFY_AUTOLOAD_TYPESCRIPT=1 node --test --experimental-test-coverage --loader ts-node/esm test/**/*.ts",
-    "start": "npm run build:ts && fastify start -l info dist/app.js",
-    "build:ts": "tsc",
-    "watch:ts": "tsc -w",
-    "dev": "npm run build:ts && concurrently -k -p \"[{name}]\" -n \"TypeScript,App\" -c \"yellow.bold,cyan.bold\" \"npm:watch:ts\" \"npm:dev:start\"",
-    "dev:start": "fastify start --ignore-watch=.ts$ -w -l info -P dist/app.js"
+    "dev": "dotenv -v NODE_ENV=development -- tsx watch --clear-screen=false src/index.ts",
+    "build": "rimraf dist && tsup",
+    "start": "fastify start -p $PORT -l info dist/app.js",
+    "lint": "eslint src"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.26.1",
-    "fastify-plugin": "^4.0.0",
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
-    "fastify-cli": "^6.1.1"
+    "close-with-grace": "^1.3.0",
+    "fastify": "^4.26.1",
+    "fastify-cli": "^6.1.1",
+    "fastify-plugin": "^4.0.0"
   },
   "devDependencies": {
+    "@eureka-bank/eslint-config": "workspace:^",
     "@types/node": "^20.4.4",
     "c8": "^9.0.0",
-    "ts-node": "^10.4.0",
-    "concurrently": "^8.2.2",
+    "dotenv-cli": "^7.4.1",
+    "eslint": "^8.57.0",
     "fastify-tsconfig": "^2.0.0",
+    "rimraf": "^5.0.5",
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.2.2"
   }
 }
