--- a/.gitignore
+++ b/.gitignore
@@ -368,3 +368,5 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/vim,node,linux,macos,windows,jetbrains,visualstudiocode
+
+.nx/cache
