chore(setup): add root scripts
- dev: start all app in dev mode
- build: build all apps
- start: start all apps in production mode
- lint: check all apps for linting error
- lint:fix: fix linting errors in all apps
- format: format all apps

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "private": true,
   "scripts": {
-    "format": "prettier . --ignore-path .gitignore",
-    "format:check": "pnpm format --check",
-    "format:write": "pnpm format --write",
+    "dev": "nx run-many --target=dev",
+    "build": "nx run-many --target=build",
+    "start": "nx run-many --target=start",
+    "lint": "nx run-many --target=lint",
+    "lint:fix": "nx run-many --target=lint --fix",
+    "format": "prettier --write . --ignore-path .gitignore",
     "commit": "cz",
     "prepare": "husky"
   },
