chore(api): connect api to database and register route
- Created db library. Use it to query database
- Created register route at /api/auth/register

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "nx run-many --target=lint",
     "lint:fix": "nx run-many --target=lint --fix",
     "format": "prettier --write . --ignore-path .gitignore",
+    "db:migrate": "nx run @eureka-bank/db:migrate",
+    "db:push": "nx run @eureka-bank/db:push",
+    "db:studio": "nx run @eureka-bank/db:studio",
     "commit": "cz",
     "prepare": "husky"
   },
