--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "dotenv -v NODE_ENV=development -- tsx watch --clear-screen=false src/index.ts",
     "build": "rimraf dist && tsup",
-    "start": "fastify start -p $PORT -l info dist/app.js",
+    "start": "node dist/index.js",
     "lint": "eslint src"
   },
   "keywords": [],
@@ -20,11 +20,14 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
     "close-with-grace": "^1.3.0",
+    "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
     "fastify-cli": "^6.1.1",
-    "fastify-plugin": "^4.0.0"
+    "fastify-plugin": "^4.0.0",
+    "zod-to-json-schema": "^3.22.5"
   },
   "devDependencies": {
+    "@eureka-bank/db": "^1.0.0",
     "@eureka-bank/eslint-config": "workspace:^",
     "@types/node": "^20.4.4",
     "c8": "^9.0.0",
