--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ESNext",
     "target": "ES2022",
     "esModuleInterop": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
