--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -7,15 +7,14 @@
   "scripts": {
     "migrate": "drizzle-kit generate:pg",
     "push": "drizzle-kit push:pg",
-    "studio": "drizzle-kit studio",
-    "lint": "eslint . --ext .ts"
-  },
-  "eslintConfig": {
-    "extends": "@eureka-bank/eslint-config/base"
+    "studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "eslintConfig": {
+    "extends": "@eureka-bank/eslint-config/base"
+  },
   "dependencies": {
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.4",
