refactor(eslint-config): move prettier config into package.json

--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -12,6 +12,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prettier": "@eureka-bank/prettier-config",
   "devDependencies": {
     "@eureka-bank/prettier-config": "workspace:^",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
