--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "dev": "dotenv -v NODE_ENV=development -- tsx watch --clear-screen=false src/index.ts",
     "build": "rimraf dist && tsup",
-    "start": "node dist/index.js",
+    "start": "dotenv -v NODE_ENV=production -- node dist/index.js",
     "lint": "eslint src"
   },
   "keywords": [],
