--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "type": "module",
-  "name": "api",
+  "name": "@eureka-bank/api",
   "description": "This project was bootstrapped with Fastify-CLI.",
   "version": "1.0.0",
   "main": "app.ts",
@@ -18,6 +18,7 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cors": "^9.0.1",
     "@fastify/sensible": "^5.0.0",
     "close-with-grace": "^1.3.0",
     "dotenv": "^16.4.5",
