--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
     "@fastify/autoload": "^5.0.0",
     "@fastify/cors": "^9.0.1",
     "@fastify/sensible": "^5.0.0",
+    "argon2": "^0.40.1",
     "close-with-grace": "^1.3.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.26.1",
