--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "nx run-many --target=start",
     "lint": "nx run-many --target=lint",
     "lint:fix": "nx run-many --target=lint --fix",
-    "format": "prettier --write . --ignore-path .gitignore",
+    "format": "prettier . --write",
     "db:migrate": "nx run @eureka-bank/db:migrate",
     "db:push": "nx run @eureka-bank/db:push",
     "db:studio": "nx run @eureka-bank/db:studio",
