chore(setup): enforce use of pnpm and node 20+

--- a/.npmrc
+++ b/.npmrc
@@ -8,3 +8,6 @@ node-linker=hoisted
 # @link https://pnpm.io/npmrc#prefer-workspace-packages
 save-workspace-protocol=false
 prefer-workspace-packages=true
+
+# Enforce the use of pnpm
+engine-strict = true
