--- a/package.json
+++ b/package.json
@@ -31,5 +31,11 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "nx": "18.1.3"
+  },
+  "engine": {
+    "node": ">= 20.0.0",
+    "pnpm": "*",
+    "npm": "please-use-pnpm",
+    "yarn": "please-use-pnpm"
   }
 }
