--- a/tools/prettier-config/package.json
+++ b/tools/prettier-config/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "prettier": "@eureka-bank/prettier-config",
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.2.1",
     "prettier": "^3.2.5",
