chore(setup): change prettier-config to private

--- a/tools/prettier-config/package.json
+++ b/tools/prettier-config/package.json
@@ -2,6 +2,7 @@
   "name": "@eureka-bank/prettier-config",
   "version": "1.0.0",
   "description": "",
+  "private": true,
   "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
