--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "commitizen": "^4.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "nx": "18.1.3"
+    "nx": "18.1.3",
+    "prettier": "^3.2.5"
   },
   "engine": {
     "node": ">= 20.0.0",
