--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,6 +23,7 @@
     "argon2": "^0.40.1",
     "close-with-grace": "^1.3.0",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.30.4",
     "fastify": "^4.26.1",
     "fastify-cli": "^6.1.1",
     "fastify-plugin": "^4.0.0",
