--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -31,7 +31,7 @@
   },
   "devDependencies": {
     "@eureka-bank/db": "^1.0.0",
-    "@eureka-bank/eslint-config": "workspace:^",
+    "@eureka-bank/eslint-config": "^1.0.0",
     "@types/node": "^20.4.4",
     "c8": "^9.0.0",
     "dotenv-cli": "^7.4.1",
