--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/cz-commitlint": "^19.2.0",
-    "@eureka-bank/prettier-config": "workspace:^",
+    "@eureka-bank/prettier-config": "^1.0.0",
     "commitizen": "^4.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
