--- a/tools/eslint-config/package.json
+++ b/tools/eslint-config/package.json
@@ -21,7 +21,7 @@
   },
   "prettier": "@eureka-bank/prettier-config",
   "devDependencies": {
-    "@eureka-bank/prettier-config": "workspace:^",
+    "@eureka-bank/prettier-config": "^1.0.0",
     "@typescript-eslint/eslint-plugin": "^7.3.1",
     "@typescript-eslint/parser": "^7.3.1",
     "eslint": "^8.57.0",
