--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.4",
     "express": "5.0.0-beta.3",
-    "pino-http": "^9.0.0"
+    "http-status-codes": "^2.3.0",
+    "pino-http": "^9.0.0",
+    "postgres": "^3.4.4"
   },
   "devDependencies": {
     "@eureka-bank/db": "^1.0.0",
