--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/cz-commitlint": "^19.2.0",
     "@eureka-bank/prettier-config": "^1.0.0",
+    "@nx/plugin": "^18.2.3",
     "commitizen": "^4.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
