--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,6 +19,7 @@
     "drizzle-orm": "^0.30.4",
     "express": "5.0.0-beta.3",
     "http-status-codes": "^2.3.0",
+    "jose": "^5.2.4",
     "pino-http": "^9.0.0",
     "postgres": "^3.4.4"
   },
