--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@chatscope/chat-ui-kit-react": "^2.0.3",
+    "dotenv": "^16.4.5",
+    "openai": "^4.32.1",
+    "readline-sync": "^1.4.10",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@commitlint/cz-commitlint": "^19.2.0",
@@ -29,7 +33,7 @@
     "commitizen": "^4.3.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "prettier": "^3.2.5",
-    "nx": "18.1.3"
+    "nx": "18.1.3",
+    "prettier": "^3.2.5"
   }
 }
