--- a/libs/db/package.json
+++ b/libs/db/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "migrate": "drizzle-kit generate:pg",
     "push": "drizzle-kit push:pg",
+    "pull": "drizzle-kit introspect:pg",
     "studio": "drizzle-kit studio",
     "lint": "eslint ."
   },
