--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,8 +20,9 @@
     "express": "5.0.0-beta.3",
     "http-status-codes": "^2.3.0",
     "pino-http": "^9.0.0",
+    "postgres": "^3.4.4",
     "web3": "^4.7.0",
-    "postgres": "^3.4.4"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@eureka-bank/db": "^1.0.0",
