--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -26,7 +26,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/app/chatBot/page.jsx"
+    "src/app/chatbot/page.jsx"
   ],
   "exclude": ["node_modules"]
 }
