--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "jsvectormap": "^1.5.3",
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
+    "next-auth": "^4.24.7",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-calendar": "^4.8.0",
