--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # api
 BACKEND_PORT=3333
 BACKEND_URL="http://localhost:${BACKEND_PORT}"
-ACCESS_TOKEN_SECRET=""
-REFRESH_TOKEN_SECRET=""
+WEB_URL="http://localhost:3000"
+
+ACCESS_TOKEN_SECRET="at_secret"
+REFRESH_TOKEN_SECRET="rt_secret"
 
 OPENAI_API_KEY=""
 
@@ -11,3 +13,7 @@ DATABASE_URL=""
 
 # quicknode
 QUICKNODE_URL=""
+
+# web
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="secret"
