--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "@eureka-bank/db": "^1.0.0",
     "@eureka-bank/eslint-config": "^1.0.0",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "dotenv-cli": "^7.4.1",
     "eslint": "^8.57.0",
