--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # api
-BACKEND_PORT=3333
-BACKEND_URL="http://localhost:${BACKEND_PORT}"
+API_PORT=3333
+API_URL="http://localhost:${API_PORT}"
 WEB_URL="http://localhost:3000"
 
 ACCESS_TOKEN_SECRET="at_secret"
