--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ WEB_URL="http://localhost:3000"
 ACCESS_TOKEN_SECRET="at_secret"
 REFRESH_TOKEN_SECRET="rt_secret"
 
+# web3
+ETHEREUM_CONTRACT_ADDRESS=""
+
+# openai
 OPENAI_API_KEY=""
 
 # db
