--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "lucide-react": "^0.363.0",
     "next": "14.1.4",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "next-transpile-modules": "^10.0.1",
     "react": "^18",
     "react-calendar": "^4.8.0",
@@ -37,6 +38,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-quill": "^2.0.0",
+    "sonner": "^1.4.41",
     "swiper": "^11.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
